Added a control to enter applied force in the box next to label
Graph force labels should color match to vectors
Applied force is now adjusted to left of graph (to coordinate with the up/down graphing of force)
Fixed: Text readouts of values on the left shouldn't alter layout
Graphing modules start paused, unpause when a force is applied
Added stub for Work-Energy module
Allow one chart to take entire available area
# 1.03.20 (33360) Jul 15, 2009
> force-graphs: Objects are in pull-down menu in control panel instead of the play area
> force-graphs: Removed force control from play area
> Fixed: Vectors should be in the topmost layer (over the applied force slider)
> Centered the object selection panel
> Fixed: Object falls off edge at wrong spot
# 1.03.19 (31397) May 6, 2009
Performance improvements
# 1.03.18 (31395) May 6, 2009
Made coordinate system adjustable by default in coordinate frame module
Performance improvements
# 1.03.17 (31391) May 6, 2009
robotmovingcompany: Improve scoring and score dialogs
Renamed "whole vectors" to "Force vectors"
Made the current 1st tab into the 2nd tab - called it "Coordinates". Made a new first tab, called "Intro" with the following controls removed: Coordinate System, Parallel Components, X-Y Components.
Fixed: Pusher graphic doesn't always update properly, for example after the block goes airborne; he updates location after the ramp is rotated.
# 1.03.16 (31291) May 4, 2009
removed slider labels as recommended by CM to see if this fixes the applied force slider knob problem
# 1.03.15 (31283) May 4, 2009
5/4/09 workaround for memory problems (not in svn)
Removed tick marks from applied force slider to make slider knob appear on mac.
Renamed "original" vectors to "whole vectors"
Robot loses energy even when work done on the particle by the robot is negative.
# 1.03.14 (31275) May 3, 2009
set applied force to zero on slider mouse release for all tabs
allow showing values outside the settable range for the applied force slider